syntax = "proto3";

package pkg.kannon.mailer.types;

option go_package = "github.com/ludusrusso/kannon/proto/kannon/mailer/types";

message EmailToSend {
  string email_id = 1;
  string from = 2;
  string to = 3;
  string return_path = 4;
  bytes body = 5;
  bool should_retry = 6;
}
